<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condimentum arcu eget erat feugiat dictum. Proin malesuada vel eros quis eleifend. Vestibulum eu justo molestie, dapibus nisl in, sagittis risus."
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <Button
        android:id="@+id/btn_true"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:backgroundTint="#2F8F1A"
        android:text="@string/btn_true"
        app:layout_constraintBottom_toBottomOf="@+id/btn_false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_false" />

    <Button
        android:id="@+id/btn_false"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#A80202"
        android:text="@string/btn_false"
        app:layout_constraintBottom_toTopOf="@+id/btn_configure"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_previous"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:backgroundTint="#817A7A"
        android:text="@string/btn_previous"
        app:layout_constraintBottom_toBottomOf="@+id/btn_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_next" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#817A7A"
        android:text="@string/btn_next"
        app:layout_constraintBottom_toTopOf="@+id/tv_question"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/btn_share"
        app:layout_constraintBottom_toBottomOf="@+id/btn_configure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_configure" />

    <Button
        android:id="@+id/btn_configure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/btn_configure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="00"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>